logs/synchg.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SyncHg-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/args-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/clint'...
Listing './lib/python3.5/site-packages/clint/packages'...
Listing './lib/python3.5/site-packages/clint/packages/colorama'...
Listing './lib/python3.5/site-packages/clint/textui'...
Listing './lib/python3.5/site-packages/clint-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plumbum'...
Listing './lib/python3.5/site-packages/plumbum/cli'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/de'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/fr'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/nl'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/ru'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/colorlib'...
Listing './lib/python3.5/site-packages/plumbum/commands'...
Listing './lib/python3.5/site-packages/plumbum/fs'...
Listing './lib/python3.5/site-packages/plumbum/machines'...
Listing './lib/python3.5/site-packages/plumbum/path'...
Listing './lib/python3.5/site-packages/plumbum-1.6.5.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/synchg'...
Compiling './lib/python3.5/site-packages/synchg/script.py'...
***   File "./lib/python3.5/site-packages/synchg/script.py", line 29
    print "Could not find config file"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/synchg/sync.py'...
***   File "./lib/python3.5/site-packages/synchg/sync.py", line 44
    print "Sync {0} -> {1}".format(name, host)
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/synchg/utils.py'...
***   File "./lib/python3.5/site-packages/synchg/utils.py", line 28
    print prompt
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
